--- a/lesson2/wififund_less2_exer2/prj.conf
+++ b/lesson2/wififund_less2_exer2/prj.conf
@@ -6,17 +6,25 @@
 
 # Wi-Fi
 # STEP 1.1 - Enable the Wi-Fi relevant configurations
-
+CONFIG_WIFI=y
+CONFIG_WIFI_NRF700X=y
+CONFIG_WPA_SUPP=y
 
 # STEP 2 - Configure the Wi-Fi credentials
+CONFIG_WIFI_CREDENTIALS=y
 # STEP 12.1 - Diasble static Wi-Fi network configuration
-
+CONFIG_WIFI_CREDENTIALS_STATIC=y
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Stopki Nahidy 601"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="GrupaWielbicieliGenshina2137"
 
 # Networking Management API
 # STEP 1.2 Enable the Network Management relevant configurations
-
-
-# STEP 13 Enable support for shell commands
+CONFIG_NET_MGMT=y
+CONFIG_NET_MGMT_EVENT=y
+CONFIG_NET_MGMT_EVENT_INFO=y
+CONFIG_NET_MGMT_EVENT_STACK_SIZE=4096
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_WIFI_MGMT_EXT=y
 
 
 # Logging
