--- a/lesson2/wififund_less2_exer3/prj.conf
+++ b/lesson2/wififund_less2_exer3/prj.conf
@@ -50,11 +50,30 @@ CONFIG_NANOPB=y
 
 # Bluetooth LE
 # STEP 1.1 - Enable the necessary Bluetooth LE configurations
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=75
+CONFIG_BT_WIFI_PROV=y
+CONFIG_BT_BONDABLE=n
 
+CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_SMP=y
+CONFIG_BT_BUF_ACL_RX_SIZE=151
+CONFIG_BT_L2CAP_TX_MTU=147
+CONFIG_BT_BUF_ACL_TX_SIZE=151
+CONFIG_BT_RX_STACK_SIZE=5120
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 
 # Storing credentials
 # STEP 1.2 - Enable the necessary NVS and flash configurations
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
 
+CONFIG_NVS=y
+CONFIG_SETTINGS=y
+CONFIG_SETTINGS_NVS=y
 
 # STEP 1.3 - Enable the necessary Wi-Fi credential configurations
-
+CONFIG_WIFI_CREDENTIALS=y
+CONFIG_WIFI_CREDENTIALS_MAX_ENTRIES=1
