--- a/lesson3/wififund_less3_exer1/prj.conf
+++ b/lesson3/wififund_less3_exer1/prj.conf
@@ -38,13 +38,22 @@ CONFIG_NEWLIB_LIBC_NANO=n
 
 # Networking
 # STEP 1.1 Configure the Zephyr networking API
-
+CONFIG_NETWORKING=y
+CONFIG_NET_NATIVE=y
 
 # STEP 1.2 - Enable and configure the BSD sockets compatible API
-
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_OFFLOAD=n
+CONFIG_NET_SOCKETS_POSIX_NAMES=y
+CONFIG_POSIX_MAX_FDS=16
 
 # STEP 1.3 - Enable the relevant networking configurations
-
+CONFIG_NET_L2_ETHERNET=y
+CONFIG_NET_IPV6=y
+CONFIG_NET_IPV4=y
+CONFIG_NET_UDP=y
+CONFIG_NET_DHCPV4=y
+CONFIG_DNS_RESOLVER=y
 
 # Memory
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
